Made Header updates and fixed viewport overflow bugs, pivoting to api calls from sign in page.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,15 +14,11 @@
   }
 
   .navLinks {
-    position: fixed;
-    right: 0;
-    top: 0;
-    left: 0;
-    background-color: black;
-    width: 100%;
     display: flex;
+    width: 90%;
     height: 7.5%;
     justify-content: center;
+    flex-direction: column;
     text-align: center;
     align-items: center;
     border-bottom: none;
@@ -34,26 +30,15 @@
     display: none;
   }
 
-.linkAnchor:visible {
-  color: white;
-  text-decoration: none;
-
-}
-
-  .navLinks>a,
-  .navLinks .linkGroup>a {
-    font-size: 20px;
-    padding: 10px;
-    margin-left: 5%;
+  .navLinks>a {
     color: white;
-    text-decoration: underline;
-    font-weight: bold;
+    text-decoration: none;
+    font-size: 1.5em;
   }
 
-  .navLinks>a:hover,
-  .navLinks .linkGroup>a:hover {
-    color: #39ff14;
-    transform: scale(1.1);
+  .navLinks>a:hover {
+    align-self: center;
+    text-decoration: underline;
   }
 
   .closeNavButton {
@@ -82,13 +67,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     width: 100%;
   }
 
   html {
     scroll-behavior: smooth;
-    background-color: grey;
+    background-color: black;
     border-top: none;
   }
 
@@ -109,6 +93,7 @@
     background-color: black;
     color: white;
     margin: 0;
+    width: 100%;
   }
 
 
@@ -118,7 +103,8 @@
     align-items: center;
     background-color: blue;
     color: silver;
-    margin: 0;
+    margin-top: 0;
+    padding-right: 0.7%;
     height: 10vh;
     border-bottom: solid grey 3px;
     border-top: solid grey 3px;
@@ -217,7 +203,8 @@
     width: 100%;
     height: 100%;
     background-color: black;
-    color: white;
+    padding-top: 0;
+    margin-top: 0;
     font-weight: bold;
     border: solid grey 3px;
     border-radius: 10px;
